--- a/infra/Deployer/module/buildspec.yaml
+++ b/infra/Deployer/module/buildspec.yaml
@@ -3,15 +3,18 @@ version: 0.2
 phases:
   install:
     commands:
-      - terragrunt --version
-      - git clone https://github.com/$REPO
+      # - git clone https://github.com/$REPO
       # - curl -O https://github.com/gruntwork-io/terragrunt/releases/download/v0.73.6/terragrunt_linux_amd64
       # - mv terragrunt_linux_amd64 terragrunt
       # - chmod u+x terragrunt
       # - mv terragrunt /usr/local/bin/terragrunt
       - terragrunt --version
+      - terraform --version
   build:
     commands:
-      - cd aws-journey/labs/deploy_lab
-      - ./deploy_lab
-      - terraform --version
+      - echo $LAB_ID
+      - cd /apps/labs/$LAB_ID/iac
+      - rm -rf .terraform .terraform.lock.hcl backend.tf provider.tf
+      - cd /apps/labs/deploy_lab
+      - ./deploy_lab_script
+      - echo FINISHED
