--- a/infra/Api/module/api.yaml
+++ b/infra/Api/module/api.yaml
@@ -12,16 +12,10 @@ paths:
             schema:
               $ref: '#/components/schemas/DeploymentData'
         required: true
+      security:
+        - internal_access: []
       x-amazon-apigateway-integration:
         uri: "arn:aws:apigateway:${aws_region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${aws_region}:${account_id}:function:${run_deployer_name}/invocations"
-        passthroughBehavior: "when_no_match"
-        httpMethod: "POST"
-        type: "aws_proxy"
-        contentHandling: "CONVERT_TO_TEXT"
-    get:
-      summary: Display Hello World
-      x-amazon-apigateway-integration:
-        uri: "arn:aws:apigateway:${aws_region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${aws_region}:${account_id}:function:${hello_world_name}/invocations"
         passthroughBehavior: "when_no_match"
         httpMethod: "POST"
         type: "aws_proxy"
@@ -43,3 +37,8 @@ components:
           type: string
     Empty:
       type: "object"
+  securitySchemes:
+    internal_access:
+      type: apiKey
+      name: x-api-key
+      in: header
