--- a/infra/Deployer/codebuild_project/buildspec.yaml
+++ b/infra/Deployer/codebuild_project/buildspec.yaml
@@ -4,9 +4,8 @@ phases:
   build:
     on-failure: ABORT
     commands:
-      - cd /apps/labs/$LAB_ID/iac/
-      - rm -rf .terraform .terraform.lock.hcl backend.tf provider.tf
+      - cd /aws-journey/labs/$LAB_ID/iac
       - if [[ -f pre_deploy.sh ]]; then ./pre_deploy.sh; fi
-      - cd /apps/labs/deploy_lab
+      - cd /aws-journey/labs/deploy_lab
       - ./deploy_lab_script
       - echo FINISHED
